--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.cjs",
-    "migrate": "prisma migrate dev --name",
+    "migrate": "prisma migrate dev",
     "build": "tsup src/ --out-dir build",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
@@ -34,10 +34,13 @@
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/oauth2": "^8.1.2",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "fastify-type-provider-zod": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
