feat: add auto documentations routes and add new route upload avatar set on cloudinary

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-# Environments
-NODE_ENV=
+# ENVIRONMENTS
+NODE_ENV
 
-# Database
-DATABASE_URL=
+# DATABASE
+DATABASE_URL
 
-# Oauth github
-CLIENT_ID=
-CLIENT_SECRET=
+# OAUTH GITHUB KEYS
+CLIENT_ID
+CLIENT_SECRET
 
-# SECRET KEY COOKIE
-SECRET_KEY_COOKIE=
+# KEY TO COOKIE CONFIG
+SECRET_KEY_COOKIE
+
+# CLOUDINARY KEYS
+API_CLOUD_NAME
+API_CLOUD_KEY
+API_CLOUD_SECRET
