--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,12 @@ NODE_ENV
 DATABASE_URL
 
 # OAUTH GITHUB KEYS
-CLIENT_ID
-CLIENT_SECRET
+GITHUB_CLIENT_ID
+GITHUB_CLIENT_SECRET
+GITHUB_API_URL
 
-# KEY TO COOKIE CONFIG
-SECRET_KEY_COOKIE
+# KEYWORD SECRET
+JWT_SECRET
 
 # CLOUDINARY KEYS
 API_CLOUD_NAME
