--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate": "prisma migrate dev",
     "build": "tsup src/ --out-dir build",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "test": "vitest run"
   },
   "author": "Felipe Pinheiro",
   "license": "MIT",
@@ -29,7 +30,9 @@
     "tsup": "^8.3.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0"
+    "typescript-eslint": "^8.23.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
