--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
